# ChangeLog for net-misc/aria2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.54 2010/01/25 16:25:15 dev-zero Exp $

*aria2-1.8.1 (25 Jan 2010)

  25 Jan 2010; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.8.1.ebuild:
  Version bump (fixes bug #299630, #302161 and #296830, thanks to Manu
  Wächter, Ivan Ivanich and Till Korten).

*aria2-1.7.0 (09 Dec 2009)

  09 Dec 2009; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.7.0.ebuild:
  Version bump.

*aria2-1.6.3-r1 (04 Dec 2009)

  04 Dec 2009; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.6.3-r1.ebuild,
  metadata.xml:
  Fixed dependencies (added xmlrpc USE flag for that), added scripts USE
  flag to install optional scripts.

  14 Nov 2009; Tiziano Müller <dev-zero@gentoo.org>
  +files/1.6.3-unaligned_pointers.patch, aria2-1.6.3.ebuild:
  Added patch to fix sigbus errors on sparc.

  14 Nov 2009; Tiziano Müller <dev-zero@gentoo.org> -aria2-0.15.3.ebuild,
  -aria2-1.5.2.ebuild, -aria2-1.6.2.ebuild:
  Removed vulnerable old versions.

  04 Nov 2009; Markus Meier <maekke@gentoo.org> aria2-1.6.3.ebuild:
  amd64 stable, bug #288291

  03 Nov 2009; Christian Faulhammer <fauli@gentoo.org> aria2-1.6.3.ebuild:
  stable x86, security bug 288291

*aria2-1.6.3 (03 Nov 2009)

  03 Nov 2009; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.6.3.ebuild:
  Version bump.

*aria2-1.6.2 (11 Oct 2009)

  11 Oct 2009; Tiziano Müller <dev-zero@gentoo.org> -aria2-1.5.1.ebuild,
  +aria2-1.6.2.ebuild:
  Version bump.

*aria2-1.5.2 (29 Aug 2009)

  29 Aug 2009; Tiziano Müller <dev-zero@gentoo.org> -aria2-1.3.3.ebuild,
  -aria2-1.4.1.ebuild, +aria2-1.5.2.ebuild:
  Version bump. Dropped old.

*aria2-1.5.1 (11 Aug 2009)

  11 Aug 2009; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.5.1.ebuild:
  Version bump.

*aria2-1.4.1 (17 Jul 2009)

  17 Jul 2009; Tiziano Müller <dev-zero@gentoo.org> -aria2-1.2.0.ebuild,