@@ -1,10 +1,7 @@
 AUX 1.6.3-unaligned_pointers.patch 2252 RMD160 2f5112c335d8d4b71d6c0bc5cf978e8a514757c1 SHA1 9c3ccbb2176903ec2b0335fe4cfcb5472840a0fa SHA256 c0b6e645c07f00a175efc12ca6967289fa6345840a8aacc5ac18a776d96408bd
 DIST aria2-1.6.3.tar.bz2 1334838 RMD160 4a2b0d88563a526e257248837d7517bbba9405fc SHA1 5a3afab9751dcc59a90c543c26a187f931b18325 SHA256 a5ecde46c8cf2bb3e17f0930c027c3a9f8907c1c2428b0827e5ef67fbfb3d022
-DIST aria2-1.7.0.tar.bz2 1365313 RMD160 bc8a2c7e04f8710f98a17c9a9f3f740515ac9bf4 SHA1 ba23a471b30952412964e72d9d0e844595df5337 SHA256 0bf9535f40f175e36314b7c5ae3d1cf502d9265ab42c3cadb89807e10a1ceedb
-DIST aria2-1.8.1.tar.bz2 1407195 RMD160 16c5f14291cf04d06bfd7847c0e45929563bc5ff SHA1 ef5ed1f311f8b5ef2363070487d751803d267b11 SHA256 0d90fd3e8847cb6899eb8c16e320fac5cbc7b66966e2c2ca41b9113fda0fcc8f
-EBUILD aria2-1.6.3-r1.ebuild 2770 RMD160 640f3a34fefb801974ab3b488f586dfcfd5cc7dd SHA1 d53d8124b6e02e64cd2171a9a5bbb5a4bf1dca1b SHA256 65cce1f16952800385a0c8cfbd564fdb253f54700ccc0c83dad87d9167b04968
+DIST aria2-1.8.2.tar.bz2 1417606 RMD160 3657c543c5f75861829e7c55f1dd89efd8835b5d SHA1 bc4d31ddd366ff528837c2d163bc7fea4c58a31a SHA256 42ff7e22298c2d1fdc99a1354109009e625cc6410c44db2c6f7299bebe2b5500
 EBUILD aria2-1.6.3.ebuild 2327 RMD160 fe6b54710d61263a1755cd4f7e023290ac69f222 SHA1 1a420dea936aaa9250d9dff3dcdfa8e65c5090b0 SHA256 ff2cd6bce65b2ed09d222ce187d903a879fbf063ad6ac10fb19d85850bf93e1f
-EBUILD aria2-1.7.0.ebuild 2745 RMD160 58e33f37266a0bc033cf8d021f21d59620f76a79 SHA1 46a90f13d6221c7817ef7005fb3bf28b4ec3f1b8 SHA256 35581a24f629631468332f0538c28d1f474433d04cd7ee426f790b7514698cae
-EBUILD aria2-1.8.1.ebuild 2758 RMD160 aee419bd9d91f167e40c2395b4b6ad3110515cf1 SHA1 6882508063fe5dbdd5613c5ce4984715dbd6697c SHA256 3672b1ba12082f9c873019c2919665d135b2b3f3d92e812f9b3f5307cb0b0e77
-MISC ChangeLog 11227 RMD160 adfd4b9c1d17764857a8c360b05031184c9d05c4 SHA1 80d4489dd56e4b670f69ff5cf3c00d18cb140219 SHA256 f42bfebc6f18a2994a88ac6f377d574027aec6d0d4478bee66f148961d1b28e7
-MISC metadata.xml 612 RMD160 e0aebf17bcb8f0e46ddb8f79ba92843546fcf8ba SHA1 a3b90fb02e250404e0140c676aab838f71868027 SHA256 7770e300e9e5afefc7aab67ce7759324e5d04f87b80d335f4310f2fe90f28010
+EBUILD aria2-1.8.2.ebuild 2758 RMD160 c8b963902bf74ddaf0eb02043ff125290fc51d7f SHA1 275a7fe88711450daf196c1055fb01398b84522b SHA256 301ba9932c0050d7f7183a077165cafee0242eb5d75461c850470eb6ab98524d
+MISC ChangeLog 11518 RMD160 220c731aecc68e3e73787994f60bd6e5bf734852 SHA1 c43b1f13865bf6d02221503418206163ab94adff SHA256 128064c2493b2b3bc86f98c7eb95296d07e0855880cdb3defb498ae5f821f3c4
+MISC metadata.xml 691 RMD160 4b77011d394f4c6cdded3dc4109464b510117551 SHA1 e8a3a1e9b875172fce356ef1a7b12711dae00fa6 SHA256 48aec8260bd012ac9380925b738db3ab06278028668b133869057b8a6de8a11d
