@@ -12,4 +12,7 @@
     <flag name="metalink">Enables support for metalink</flag>
     <flag name="scripts">Install additional scripts which use aria2's xmlrpc functionality</flag>
   </use>
+  <upstream>
+    <remote-id type="sourceforge">aria2</remote-id>
+  </upstream>
 </pkgmetadata>
